# webtoken-rs

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  MULTIPLATFORM_BUILD.md  README.md  build.rs  package.json  report.md  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml  lint.yml  publish.yml
examples/: advanced_features.ts  auth_server.ts  auth_service.ts  dev.ts  opaque_demo.ts  web_index.html
scripts/: build_multiplatform.ts  download-release-assets.ts
src/: argon.rs  lib.rs  opaque.rs  paseto-parser.ts  paseto.rs  scrypt.rs
tests/: benchmark.ts  index.test.ts
