[package]
name = "webtoken"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu"
]

[dependencies]
napi = { version = "3.8.2", features = ["napi9", "async", "serde-json"] }
napi-derive = "3.5.4"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
pasetors = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
