[package]
name = "webtoken"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu"
]

[dependencies]
# Core NAPI
napi = { version = "3.8.2", features = ["napi9", "async", "serde-json"], optional = true }
napi-derive = { version = "3.5.4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Hashing (with SIMD acceleration)
argon2 = { version = "0.5", features = ["password-hash", "std"] }
scrypt = { version = "0.11", features = ["password-hash"] }

# PASETO (V4 Local & Public)
pasetors = { version = "0.7", features = ["serde"] }
ed25519-compact = "2.1"

# OPAQUE PAKE (Zero-Knowledge Passwords)
opaque-ke = { version = "4.0", features = ["std", "argon2"] }
rand = "0.8"

# Shared Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
mimalloc = "0.1"

[build-dependencies]
napi-build = { version = "2.1", optional = true }

[features]
default = ["napi-base"]
napi-base = ["napi", "napi-derive", "napi-build", "tokio"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
